fix left margin on small screens

--- a/style.scss
+++ b/style.scss
@@ -44,31 +44,30 @@ html {
 body {
 	background: $bg-color;
   color: $text-color;
-  font: 3vh/1.4em $content-font;
+  font: 3vh/1.6em $content-font;
 }
 
 .container {
   display: flex;
-  align-content: center;
-  justify-content: center;
   margin: 10vh auto;
+  padding: 0;
   width: 88vw;
 }
 
 h1, h2, h3, h4, h5, h6 {
   color: $text-color;
   font-family: $header-font;
-  line-height: 1.4;
+  line-height: 1.4em;
   margin: 0;
   padding: 0;
 
   @include mobile {
-    line-height: 1.2;
+    line-height: 1.2em;
   }
 }
 
 h1 {
-  font-size: 4vw;
+  font-size: 4vh;
   letter-spacing: 0.2vw;
   text-align: center;
   a {
@@ -229,7 +228,7 @@ li:nth-child(3n)::selection {
 
 .site-description {
   color: $secondary-text-color;
-  font-size: 2.4vw;
+  font-size: 2.5vw;
   line-height: 1.5em;
 }
 
@@ -249,14 +248,6 @@ li:nth-child(3n)::selection {
     font-size: 2.8vh;
     line-height: 1.5em;
     font-style: italic;
-  }
-
-  .comments {
-    margin-top: 10px;
-  }
-
-  .read-more {
-    font-size: 15px;
   }
 }
 
